fix: better alignment of query filter swatches

--- a/src/components/Filter/QueryFilter.scss
+++ b/src/components/Filter/QueryFilter.scss
@@ -10,18 +10,24 @@
         margin-right: .25rem;
       }
     }
-    label {
-      margin-right: 1rem;
-      display: flex;
-      align-items: center;
-      input {
-        margin-right: .25rem;
-      }
-      .swatch {
-        height: 1rem;
-        width: 1rem;
-        display: inline-block;
-        margin-left: .25rem;
+    .field-container {
+      display: inline-flex;
+      flex-direction: column;
+      label {
+        display: inline-flex;
+        align-items: center;
+        justify-content: flex-start;
+        input {
+          margin-right: .25rem;
+        }
+        .checkbox-label {
+          margin-right: .25rem;
+        }
+        .swatch {
+          height: 1rem;
+          width: 1rem;
+          margin-left: auto;
+        }
       }
     }
   }
